@@ -1,27 +1,29 @@
 package events;
 
 import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
 
+import config.Config;
+
 public class EventList {
 
-    private List<Event> events;
-    private List<Event> zone;
+    private LinkedList<Event> events;
+    private LinkedList<Event> zone;
     
     /**
      * Maximum interval between sensor events, for the event to be considered a zone event.
      *  Default value 1 sec.
      */
-    private int zone_interval = 1000;
+    private int zone_interval;
     
     /**
      * Time interval stored in the event list. 
      */
-    private int pattern_interval =  10*1000;
-    private int pattern_length = 7;
-    private int pattern_depth = 7;
+    private int pattern_interval;
+    private int pattern_length;
     
     public static void main(String[] args) {
         EventList list = new EventList();
@@ -34,12 +36,16 @@ public class EventList {
     public EventList() {
         events = new LinkedList<Event>();
         zone = new LinkedList<Event>();
+        this.pattern_interval = Config.patternInterval;
+        this.pattern_length = Config.patternLength;
+        this.zone_interval = Config.zoneInterval;
     }
     
-    public EventList(int zone_interval, int pattern_interval) {
+    public EventList(int zone_interval, int pattern_interval, int pattern_length) {
         this();
         this.zone_interval = zone_interval;
         this.pattern_interval = pattern_interval;
+        this.pattern_length = pattern_length;
     }
     
     /**
@@ -47,8 +53,9 @@ public class EventList {
      * @param e
      */
     public void add(Event e) {
-        removeOld();
-        if(e instanceof SensorEvent)
+        removeOld(e.getTS());
+        
+        if(Config.useSensorZones && e instanceof SensorEvent)
             determineZone(e);
         
         events.add(e);
@@ -58,31 +65,15 @@ public class EventList {
      * removes all events if more than pattern interval has passed since the last event
      * also mantains a maximum pattern depth
      */
-    private void removeOld() {
-        if(events.size() > 0 && System.currentTimeMillis() - events.get(events.size()-1).getTS() > pattern_interval)
+    private void removeOld(long time) {
+        if(events.size() > 0 && time - events.getLast().getTS() > pattern_interval)
             events.clear();
 
         if (events.size() >= pattern_length)
-            events.remove(0);
+            events.removeFirst();
     }
-    
-    private void determineZone(Event e) {
-        if (!(e instanceof SensorEvent))
-            return;
-
-        //remove events more than zone_interval old
-        while(zone.size() > 0 && (e.getTS() - zone.get(0).getTS() > zone_interval))
-                zone.remove(0);
         
-        //remove duplicates and older (e.g. 1,2,3,4,2 -> 3,4,2)
-        boolean duplicates = false;
-        for (int i = zone.size() - 1; i >= 0; i--) {
-            if (zone.get(i).compareID(e.getID())) {
-        if (events.size() >= pattern_depth)
-            events.remove(0);
-    }
-    
-    private int currentPatternDepth() {
+    private int currentPatternLength() {
         int count = 0;
         for (Event e : events)
             if (e instanceof SensorEvent)
@@ -95,8 +86,8 @@ public class EventList {
             return;
         
         //remove events more than zone_interval old
-        while(zone.size() > 0 && (e.getTS() - zone.get(0).getTS() > zone_interval))
-                zone.remove(0);
+        while(zone.size() > 0 && (e.getTS() - zone.getFirst().getTS() > zone_interval))
+                zone.removeFirst();
                 
         //remove duplicates and older (e.g. 1,2,3,4,2 -> 3,4,2)
         boolean duplicates = false;
@@ -115,7 +106,7 @@ public class EventList {
             zone.remove(0);
         
         if(zone.size() >= 2) {
-            events.add(new ZoneEvent(zone));
+            events.add(new ZoneEvent(zone, e.getTS()));
         }
     }
     
@@ -136,7 +127,10 @@ public class EventList {
         add(new SwitchEvent(id, cmd));
     }
     
-    //TODO various get methods
+    /**
+     * get events in event list, including detected zone events
+     * @return
+     */
     public Event[] getEvents() {
         Event[] array = new Event[events.size()];
         events.toArray(array);
@@ -151,29 +145,27 @@ public class EventList {
     }
     
     /**
-     * get events in event list, including detected zone events
-     * @return
-     */
-    public Event[] getEvents() {
-        return events.toArray(new Event[events.size()]);
-    }
-    
-    /**
      * get only sensor and zone events
      * @return
      */
     public Event[] getPattern() {
-        //TODO  
-        Event[] pattern = new Event[pattern_depth];
+        Event[] pattern = new Event[pattern_length];
         //if current pattern depth is less than pattern depth, fill missing with -1 
-        for (int i = 0; i < pattern_depth - currentPatternDepth(); i++) {
+        for (int i = 0; i < pattern_length - currentPatternLength(); i++) {
             pattern[i] = new SensorEvent(-1);
         }
         
         Iterator<Event> it = events.iterator();
-        for (int i = pattern_depth - currentPatternDepth(); i < pattern_depth; i++) {
+        for (int i = pattern_length - currentPatternLength(); i < pattern_length; i++) {
             pattern[i] = it.next();
         }
         return pattern;
+    }
+    
+    public Event getLastEvent() {
+        if (events.size() > 0)
+            return events.getLast();
+        
+        return null;
     }
 }
